--- a/src/libicalss/CMakeLists.txt
+++ b/src/libicalss/CMakeLists.txt
@@ -8,10 +8,10 @@ include_directories(
 if(WIN32)
   set(TOPS "\"${CMAKE_SOURCE_DIR}\"")
   set(TOPB "\"${CMAKE_BINARY_DIR}\"")
-else(WIN32)
+else()
   set(TOPS "${CMAKE_SOURCE_DIR}")
   set(TOPB "${CMAKE_BINARY_DIR}")
-endif(WIN32)
+endif()
 
 add_custom_command(
   OUTPUT
@@ -66,7 +66,7 @@ set(icalss_LIB_SRCS
 
 if(MSVC)
   list(APPEND icalss_LIB_SRCS ../icalss.def)
-endif(MSVC)
+endif()
 
 add_library(icalss ${LIBRARY_TYPE} ${icalss_LIB_SRCS})
 add_library(icalss-static STATIC ${icalss_LIB_SRCS})
@@ -79,9 +79,9 @@ target_link_libraries(icalss ical)
 if(MSVC)
   set_target_properties(icalss PROPERTIES OUTPUT_NAME "libicalss")
   set_target_properties(icalss-static PROPERTIES OUTPUT_NAME "libicalss-static")
-else(MSVC)
+else()
   set_target_properties(icalss-static PROPERTIES OUTPUT_NAME "icalss")
-endif(MSVC)
+endif()
 set_target_properties(icalss PROPERTIES
   VERSION ${LIBICAL_LIB_VERSION_STRING}
   SOVERSION ${LIBICAL_LIB_MAJOR_VERSION}
@@ -89,7 +89,11 @@ set_target_properties(icalss PROPERTIES
 set_target_properties(icalss PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 set_target_properties(icalss-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
-install(TARGETS icalss icalss-static ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(
+  TARGETS icalss icalss-static
+  EXPORT icalTargets
+  DESTINATION ${INSTALL_TARGETS_DEFAULT_ARGS}
+)
 
 ########### install files ###############
 
