--- a/src/libicalvcal/CMakeLists.txt
+++ b/src/libicalvcal/CMakeLists.txt
@@ -25,7 +25,7 @@ set(icalvcal_LIB_SRCS
 
 if(MSVC)
   list(APPEND icalvcal_LIB_SRCS ../icalvcal.def)
-endif(MSVC)
+endif()
 
 add_library(icalvcal ${LIBRARY_TYPE} ${icalvcal_LIB_SRCS})
 add_library(icalvcal-static STATIC ${icalvcal_LIB_SRCS})
@@ -38,9 +38,9 @@ target_link_libraries(icalvcal ical)
 if(MSVC)
   set_target_properties(icalvcal PROPERTIES OUTPUT_NAME "libicalvcal")
   set_target_properties(icalvcal-static PROPERTIES OUTPUT_NAME "libicalvcal-static")
-else(MSVC)
+else()
   set_target_properties(icalvcal-static PROPERTIES OUTPUT_NAME "icalvcal")
-endif(MSVC)
+endif()
 set_target_properties(icalvcal PROPERTIES
   VERSION ${LIBICAL_LIB_VERSION_STRING}
   SOVERSION ${LIBICAL_LIB_MAJOR_VERSION}
@@ -48,7 +48,11 @@ set_target_properties(icalvcal PROPERTIES
 set_target_properties(icalvcal PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 set_target_properties(icalvcal-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 
-install(TARGETS icalvcal icalvcal-static ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(
+  TARGETS icalvcal icalvcal-static
+  EXPORT icalTargets
+  DESTINATION ${INSTALL_TARGETS_DEFAULT_ARGS}
+)
 
 ########### install files ###############
 
